# PictureSave

./: .gitignore  PictureSave.cabal  Setup.hs  stack.yaml
src/: Files.hs  Main.hs  Options.hs
