name:                PictureSave
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/PictureSave#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable PictureSave
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

  other-modules:
    Files,
    Options

  build-depends:
    base >= 4.7 && < 5,
    hsexif == 0.6.0.10,
    directory >= 1.2 && < 1.3,
    filepath >= 1.4 && < 1.5,
    Glob >= 0.7 && < 0.8,
    time >= 1.6 && < 1.7

  ghc-options: -Wall -rtsopts -O2
