name:                PictureSave
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Koehler
build-type:          Simple
cabal-version:       >=1.10

executable PictureSave
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

  other-modules:
    Files,
    Options

  build-depends:
    base >= 4.7 && < 5,
    hsexif == 0.6.0.10,
    directory >= 1.2 && < 1.3,
    filepath >= 1.4 && < 1.5,
    Glob >= 0.7 && < 0.8,
    time >= 1.6 && < 1.7

  ghc-options: -Wall -rtsopts -O2
